# Word_metadata

./: LICENSE  README.md  pyproject.toml
word_metadata/: word_metadata.py
